# MineBot

./: .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  design.yml  failure_case.yml
.github/workflows/: contributor-truth-gate.yml
body-mod/: README.md  build.gradle  gradle.properties  settings.gradle
camera/: config.py  dependencies.lock.json  example.toml  service.py
camera-client-mod/: build.gradle  gradle.properties  settings.gradle
camera/cli/: __init__.py  check_deps.py  main.py
camera/control/: __init__.py  follow.py  observer.py
camera/output/: __init__.py  ffmpeg.py
minebot/: __init__.py
minebot/app/: __init__.py  autonomy.py  body_capability_tools.py  body_events.py  config.py  console.py  conversation.py  conversation_tools.py  exploration.py  local_launcher.py  memory.py  model_provider.py  observability.py  observation_artifacts.py  phase1_runtime.py  wiki.py  (+13 more)
minecraft/: build.gradle  settings.gradle
tests/: agent_context_lifecycle_test.py  agent_provider_test.py  agent_registry_test.py  body_fidelity_test.py  body_spike_test.py  carpet_deep_test.py  e2e_agent_a6_memory_knowledge_skills.py  e2e_agent_collect_resource.py  e2e_agent_diamond_ladder.py  e2e_agent_idle_event_wake.py  e2e_agent_real_model_collect.py  e2e_agent_restart_reconciliation.py  e2e_agent_runtime_spine.py  e2e_agent_tool_layer.py  e2e_body_ascend_cancel.py  e2e_body_attack.py  e2e_body_bed.py  e2e_body_clear_furnace.py  e2e_body_consume.py  e2e_body_container.py  e2e_body_container_nearest.py  e2e_body_container_view.py  e2e_body_craft.py  e2e_body_death_respawn.py  e2e_body_dig_down.py  e2e_body_dig_up.py  e2e_body_discard.py  e2e_body_drop.py  e2e_body_ender_chain_rehearsal.py  e2e_body_equip.py  e2e_body_farm.py  e2e_body_furnace.py  e2e_body_give_player.py  e2e_body_go_to_surface.py  e2e_body_inventory.py  e2e_body_jump.py  e2e_body_mine.py  e2e_body_mine_tier.py  e2e_body_move.py  e2e_body_move_away.py  (+49 more)
tools/: camera-observer-client.sh  find_w1_candidates.py  probe_craft_no_table.py  probe_smelt_recipe.py  probe_w1.py  probe_w1_search.py  reset-world.sh  run_g3_natural_observation.py  run_wg1_playable_gate.py  setup_w3_arena.py
(+188 files in other folders)
