[project]
name = "minebot"
version = "0.1.0"
description = "MineBot body + agent layer"
requires-python = ">=3.13"
dependencies = [
    # Agent framework — imported ONLY in the binding ring (minebot/app/).
    # Pinned: the SDK adds surfaces fast and LitellmModel is beta
    # (agent-layer-architecture.md §6, §12 watch-item).
    "openai-agents==0.17.6",
    "filelock>=3.16,<4",
    "PyYAML>=6.0.2,<7",
]

[project.scripts]
minebot-camera = "minebot.camera.cli.main:main"

[tool.setuptools.package-data]
"minebot.skills" = ["catalog/*/SKILL.md"]

[tool.setuptools.packages.find]
include = ["minebot*"]

[project.optional-dependencies]
# kind="litellm" providers (Anthropic, Gemini, …) need this beta extra.
litellm = ["openai-agents[litellm]==0.17.6"]
camera = ["websockets==16.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
